Added so the whole field acts as a link for comparing the product

--- a/src/app/components/product-field/product-field.scss
+++ b/src/app/components/product-field/product-field.scss
@@ -79,6 +79,10 @@
   color: #fff;
   border: 1px solid #2975b5;
   border-bottom-width: 2px;
+}
+
+a, a:hover, a:visited, a:active {
+  color: initial;
   text-decoration: none;
 }
 
