--- a/src/app/components/product-field/product-field.responsive.scss
+++ b/src/app/components/product-field/product-field.responsive.scss
@@ -1,3 +1,10 @@
+/* For tablets: */
+@media only screen and (max-width: 768px) {
+  .product-inner-right-container {
+    padding-left: 10px;
+  }
+}
+
 /* For mobiles: */
 @media only screen and (max-width: 600px) {
   .product-container:not(:first-child) {
@@ -29,9 +36,14 @@
   }
 }
 
-/* For tablets: */
-@media only screen and (max-width: 768px) {
-  .product-inner-right-container {
-    padding-left: 10px;
+/* For very small screens */
+@media only screen and (max-width: 340px) {
+  .product-lower-desc p:last-child {
+    margin-right: 35px;
+    min-width: 85px;
+  }
+
+  .product-lower-desc p span {
+    font-size: 1.1em;
   }
 }
